# hice-dt

./: .gitignore  Makefile
benchmarks/concurrentPrograms/: 12_hour_clock_serializaton.bpl.attributes  12_hour_clock_serializaton.bpl.data  12_hour_clock_serializaton.bpl.json  12_hour_clock_serializaton.bpl.statistics  12_hour_clock_serializaton.bpl.time  18_read_write_lock_true-unreach-call-OG.bpl.attributes  18_read_write_lock_true-unreach-call-OG.bpl.data  18_read_write_lock_true-unreach-call-OG.bpl.horn  18_read_write_lock_true-unreach-call-OG.bpl.intervals  18_read_write_lock_true-unreach-call-OG.bpl.json  18_read_write_lock_true-unreach-call-OG.bpl.statistics  18_read_write_lock_true-unreach-call-OG.bpl.time  Producer_consumer_atomic_operation-OG.bpl.attributes  (+59 more)
hice-dt/: .clang-format  .gitignore  CMakeLists.txt
hice-dt/include/: complex_job_manager.h  debug_job_manager.h  decision_tree.h  indices.h  job.h  job_manager.h  learner.h  simple_job_manager.h  simple_job_manager.impl.h  split.h  util.h
hice-dt/src/: Makefile  complex_job_manager.cpp  hice-dt.cpp  indices.cpp  job.cpp  job_manager.cpp  json_visitor.cpp  output_visitor.cpp  pretty_print_visitor.cpp  simple_job_manager.cpp  split.cpp
scripts/: compare_results.sh  run_concurrentPrograms.sh  run_recursivePrograms.sh  run_recursivePrograms_Ultimate.sh  run_sequentialPrograms.sh  run_sequentialPrograms_PDR.sh  tabulate_time_concurrentPrograms.sh  tabulate_time_recursivePrograms.sh  tabulate_time_recursivePrograms_Ultimate.sh  tabulate_time_sequentialPrograms.sh  tabulate_time_sequentialPrograms_PDR.sh
(+3 files in other folders)
